Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26760

Modeling Tool lacks options compared to QtCreator5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.2
    • Qt Creator 6.0.0
    • All Other Issues
    • None
    • Linux/X11
    • 5a135ba442 (qt-creator/qt-creator/6.0) 5a135ba442 (qt-creator/qt-creator/master) 5a135ba442 (qt-creator/qt-creator/qmlprojectstorage) 5a135ba442 (qt-creator/qt-creator/qds-3.0)

      When we compare how the Class properties of a Class of a class diagram of a model look like in Qtc5 an Qtc6 (see attached screenshots of the same model opened in QtC 5.0.1 and in QtC 6.0.0): then we see that many options are missing.

      I was desperately looking for the "Show members" checkbox. I finally found it, but I had to dig into a previous QtC version.

      The expected result is: the properties of the class would have the same features in QtC6 as they had in QtC5. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            larsf Lars Fischer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes