Modeling: Fix queued connections for Qt 6

The argument must be registered as a meta type for queued connections.
This also depends on a consistent naming of the type in the signal
arguments (which best is fully qualified).

Fixes: QTCREATORBUG-26760
Task-number: QTCREATORBUG-24098
Change-Id: I83991326f051d592a1665ae8cdb472d8376e74bc
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>